objects/Setup_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Secret__c</fullName>
        <label>Signing Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Configuration</label>
    <pluralLabel>Setup Configurations</pluralLabel>
</CustomObject>